Modification portfolio-apprentissage

--- a/cv.html
+++ b/cv.html
@@ -44,7 +44,7 @@
             <div class="size-20x20 gradient-bg-right"></div>
             <p class="text-page-title"><strong>CV</strong></p>
         </div>
-        <!-- SECTION EXPÉRIENCE -->
+        <!-- SECTION BIOGRAPHIE -->
         <div class="d-flex justify-content-between">
             <h1>Biographie</h1>
             <div class="px-20">
@@ -77,7 +77,7 @@
             <h1>Expérience</h1>
         </div>
         <!-- Stage Orchestra -->
-        <div class="section">
+        <div class="section" id="stageOrchestra">
             <div class="sectioncv2">
                 <h3>Février 2025 - Mars 2025</h3>
                 <h2>Stage - Software Engineer</h2>
