--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -49,71 +49,7 @@
             <div class="size-20x20 gradient-bg-right"></div>
             <p class="text-page-title"><strong>Apprentissage Critique</strong></p>
         </div>
-        <!-- Réaliser des applications -->
-        <div class="section">
-            <div class="section2-apprentissage">
-                <div class="d-flex">
-                    <div class="size-10x50 gradient-bg-bottom"></div>
-                    <div class="px-20">
-                        <h3>Réaliser des applications</h3>
-                    </div>
-                </div>
-                <h2>Faire des essais et évaluer leurs résultats en regard des spécifications</h2>
-                <p class="p-5-15">
-                    Lors de mon stage chez Orchestra - TravelSoft, j'ai été chargé de réaliser un outil de test
-                    automatique.
-                    C'est en effectuant des essais sur de nombreux jeux de données pendant toute la durée de mon stage
-                    que j'ai acquis cette compétence.
-                    Cela m'a permis de travailler concrètement sur la qualité du code et d'identifier les améliorations
-                    nécessaires en évaluant les résultats obtenus par rapport aux spécifications attendues.
-                </p>
-                <h2>Adopter de bonnes pratiques de conception et de programmation</h2>
-                <p class="p-5-15">
-                    Durant le projet, j'ai dû réaliser l'arborescence des classes de test.
-                    Comme beaucoup de tests utilisaient les mêmes fonctions,
-                    mon objectif d'éviter la redondance et de rendre les tests aussi lisibles que possible m'a poussé à
-                    adopter de bonnes pratiques de conception.
-                    C'est en structurant les classes de test de manière logique et en mutualisant les fonctions que j'ai
-                    développé cette compétence.
-                </p>
-                <h2>Intégrer des solutions dans un environnement de production</h2>
-                <p class="p-5-15">
-                    J'ai pu intégrer mes tests dans l'environnement Qualité de l'entreprise où des tests existaient
-                    déjà.
-                    Cette intégration m'a montré comment les tests étaient mis en place dans cet environnement.
-                    J'ai aussi utilisé Allure, un outil de reporting.
-                    C'est en participant à cette intégration et en utilisant cet outil que j'ai acquis cette compétence
-                    et que cela a été très enrichissant pour ma compréhension.
-                </p>
-            </div>
-            <div class="section3-apprentissage">
-                <h3>En détails</h3>
-                <h2>Composantes essentielles :</h2>
-                <p class="p-5-15">
-                    - Respecter les besoins décrits par les clients
-                </p>
-                <p class="p-5-15">
-                    - Appliquer les principes algorithmiques
-                </p>
-                <p class="p-5-15">
-                    - Veiller à la qualité du code et à sa documentation
-                </p>
-                <p class="p-5-15">
-                    - Choisir les ressources techniques appropriées
-                </p>
-                <h2>Apprentissages critiques :</h2>
-                <p class="p-5-15">
-                    - Faire des essais et évaluer leurs résultats en regard des spécifications
-                </p>
-                <p class="p-5-15">
-                    - Adopter de bonnes pratiques de conception et de programmation
-                </p>
-                <p class="p-5-15">
-                    - Intégrer des solutions dans un environnement de production
-                </p>
-            </div>
-        </div>
-        <!-- Réaliser des applications -->
+        <!-- Optimiser des applications -->
         <div class="section">
             <div class="section2-apprentissage">
                 <div class="d-flex">
@@ -122,29 +58,28 @@
                         <h3>Optimiser des applications</h3>
                     </div>
                 </div>
+                <h2>Choisir des structures de données complexes adaptées au problème</h2>
+                <p class="p-5-15">
+                    Pour le <a href="projets.html#projetEcommerce" class="underline">projet e-commerce</a>,
+                    j'ai choisi une base de données relationnelle pour gérer efficacement les produits, utilisateurs et commandes,
+                    car elle permettait de bien lier ces éléments. J'ai appris à évaluer les besoins d'un projet pour choisir la bonne structure de données.
+                </p>
+                <h2>Utiliser des techniques algorithmiques adaptées pour des problèmes complexes</h2>
+                <p class="p-5-15">
+                    Dans le <a href="projets.html#projetReferendum" class="underline">projet référendum</a>,
+                    j'ai utilisé Elgamal pour chiffrer les votes envoyés au serveur. J'ai appris à appliquer des algos de cryptographie pour sécuriser les infos sensibles,
+                    ce qui m'a montré l'importance de la sécurité en développement.
+                </p>
                 <h2>Comprendre les enjeux et moyens de sécurisation des données et du code</h2>
                 <p class="p-5-15">
-                    Lors du projet e-commerce, la sécurité des données était cruciale.
-                    J'ai appris à identifier les failles et à appliquer des mesures de sécurité comme le chiffrement et
-                    la validation des entrées contre les injections SQL.
-                    C'est en étant confronté à ces impératifs et en mettant en œuvre ces solutions que j'ai compris les
-                    enjeux et les moyens de sécurisation.
+                    Pour le <a href="projets.html#projetEcommerce" class="underline">projet e-commerce</a>,
+                    la sécurité des données était cruciale. J'ai appris à trouver les failles et à utiliser des mesures de sécurité comme le chiffrement et la validation contre les injections SQL.
+                    C'est en faisant face à ces obligations et en appliquant ces solutions que j'ai compris l'importance de la sécurisation.
                 </p>
-                <h2>Anticiper les résultats de diverses métriques</h2>
+                <h2>Évaluer l’impact environnemental et sociétal des solutions proposées</h2>
                 <p class="p-5-15">
-                    Durant mon stage chez Orchestra - TravelSoft, lancer les 350 tests automatisés prenait 6 heures.
-                    Pour optimiser mon temps, j'ai appris à bien vérifier mon code afin d'éviter les erreurs et les
-                    relances.
-                    C'est cette contrainte de temps qui a développé ma capacité à anticiper les résultats des métriques
-                    de test.
-                </p>
-                <h2>Choisir et utiliser des bibliothèques et méthodes dédiées au domaine d’application</h2>
-                <p class="p-5-15">
-                    Pour le projet Référendum, j'ai utilisé des bibliothèques pour la communication via Threads et pour
-                    la cryptographie.
-                    Cette expérience pratique m'a permis de comprendre leur fonctionnement et leur utilisation efficace.
-                    C'est en sélectionnant et en utilisant ces outils spécifiques au projet que j'ai acquis cette
-                    compétence.
+                    Dans mes projets, j'ai réalisé l'impact environnemental de l'informatique. Par exemple, pour le jeu <a href="projets.html#projetLegendsBuster" class="underline">LegendsBuster</a>,
+                    on devait faire un jeu éco-responsable : code propre et optimisé, faible consommation et petite taille pour toucher plus de monde.
                 </p>
             </div>
             <div class="section3-apprentissage">
@@ -174,38 +109,87 @@
                 </p>
             </div>
         </div>
-        <!-- Collaborer en équipe -->
+        <!-- Gérer des données de l’information -->
         <div class="section">
             <div class="section2-apprentissage">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
-                        <h3>Collaborer en équipe</h3>
+                        <h3>Gérer des données de l’information</h3>
                     </div>
                 </div>
-                <h2>Appréhender et Formaliser les besoins du client et de l’utilisateur</h2>
+                <h2>Optimiser les modèles de données de l’entreprise</h2>
                 <p class="p-5-15">
-                    Lors du projet référendum, comprendre les besoins du client et de l'utilisateur était essentiel.
-                    La communication constante avec le client pour cerner ses attentes et s'assurer de sa satisfaction
-                    finale m'a permis de développer cette compétence d'appréhension et de formalisation des besoins.
+                    Pour le <a href="projets.html#projetReferendum" class="underline">projet référendum</a>,
+                    j'ai conçu des modèles de données adaptés, en utilisant PlantUML pour des diagrammes de classes et de séquence afin de bien comprendre les liens entre les éléments.
+                </p>
+                <h2>Assurer la confidentialité des données</h2>
+                <p class="p-5-15">
+                    Dans les projets <a href="projets.html#projetReferendum" class="underline">référendum</a> et <a href="projets.html#projetEcommerce" class="underline">e-commerce</a>,
+                    j'ai sécurisé les données sensibles en utilisant Elgamal pour les votes, en gérant les accès par rôle et en hachant les mots de passe avec du sel.
+                </p>
+                <h2>Organiser la restitution de données à travers la programmation et la visualisation</h2>
+                <p class="p-5-15">
+                    Pour le <a href="projets.html#projetEcommerce" class="underline">projet e-commerce</a>,
+                    j'ai utilisé PHP pour créer des pages web dynamiques qui affichaient les infos des produits et des utilisateurs.
+                </p>
+                <h2>Manipuler des données hétérogènes</h2>
+                <p class="p-5-15">
+                    Pendant mon stage chez <a href="cv.html#stageOrchestra" class="underline"> Orchestra - Travelsoft</a>, j'ai récupéré des données au format IATA (aérien) et je les ai comparées avec des données internes de l'entreprise.
+                    Ça m'a beaucoup appris sur la gestion de données variées.
+                </p>
+            </div>
+            <div class="section3-apprentissage">
+                <h3>En détails</h3>
+                <h2>Composantes essentielles :</h2>
+                <p class="p-5-15">
+                    - Respecter les réglementations sur le respect de la vie privée et la protection des données personnelles
+                </p>
+                <p class="p-5-15">
+                    - Respectant les enjeux économiques, sociétaux et écologiques de l'utilisation du stockage de données, ainsi que les différentes infrastructures
+                </p>
+                <p class="p-5-15">
+                    - S'appuyer sur des bases mathématiques
+                </p>
+                <p class="p-5-15">
+                    - Assurer la cohérence et la qualité
+                </p>
+                <h2>Apprentissages critiques :</h2>
+                <p class="p-5-15">
+                    - Lancer un nouveau projet
+                </p>
+                <p class="p-5-15">
+                    - Sécuriser des données
+                </p>
+                <p class="p-5-15">
+                    - Exploiter des données pour la prise de décisions
+                </p>
+            </div>
+        </div>
+        <!-- Conduire un projet -->
+        <div class="section">
+            <div class="section2-apprentissage">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
+                        <h3>Conduire un projet</h3>
+                    </div>
+                </div>
+                <h2>Identifier les processus présents dans une organisation en vue d’améliorer les systèmes d’information</h2>
+                <p class="p-5-15">
+                    <!-- TODO  -->
+                </p>
+                <h2>Formaliser les besoins du client et de l’utilisateur</h2>
+                <p class="p-5-15">
+                    <!-- TODO  -->
+                </p>
+                <h2>Identifier les critères de faisabilité d’un projet informatique</h2>
+                <p class="p-5-15">
+                    <!-- TODO  -->
                 </p>
                 <h2>Définir et mettre en œuvre une démarche de suivi de projet</h2>
                 <p class="p-5-15">
-                    Durant le projet référendum, j'ai participé à la définition et à la mise en œuvre d'une démarche de
-                    suivi de projet.
-                    L'utilisation de GitLab, avec ses issues et merge requests, nous permettait de suivre l'avancement à
-                    chaque sprint et de planifier les étapes suivantes.
-                    C'est cette expérience pratique avec des outils de gestion de projet qui m'a permis d'acquérir cette
-                    compétence.
-                </p>
-                <h2>Mesurer les impacts économiques, sociétaux et technologiques d’un projet informatique</h2>
-                <p class="p-5-15">
-                    Lors de mon stage chez Orchestra - TravelSoft, mon projet d'automatisation des tests a eu des
-                    impacts concrets.
-                    Il a permis à l'entreprise de gagner du temps et de l'argent, tout en soulageant une personne d'une
-                    tâche manuelle et répétitive.
-                    C'est en constatant ces bénéfices directs que j'ai pu mesurer les impacts économiques et sociétaux
-                    d'un projet informatique.
+                    <!-- TODO  -->
                 </p>
             </div>
             <div class="section3-apprentissage">
@@ -225,13 +209,13 @@
                 </p>
                 <h2>Apprentissages critiques :</h2>
                 <p class="p-5-15">
-                    - Appréhender et Formaliser les besoins du client et de l’utilisateur
+                    - Lancer un nouveau projet
                 </p>
                 <p class="p-5-15">
-                    - Définir et mettre en œuvre une démarche de suivi de projet
+                    - Piloter le maintien d'un projet en condition opérationnelle
                 </p>
                 <p class="p-5-15">
-                    - Mesurer les impacts économiques, sociétaux et technologiques d’un projet informatique
+                    - Faire évoluer un système d'information
                 </p>
             </div>
         </div>
