Modification portfolio-apprentissage

--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -135,7 +135,7 @@
                 </p>
                 <h2>Manipuler des données hétérogènes</h2>
                 <p class="p-5-15">
-                    Pendant mon stage chez <a href="cv.html#stageOrchestra" class="underline"> Orchestra - Travelsoft</a>, j'ai récupéré des données au format IATA (aérien) et je les ai comparées avec des données internes de l'entreprise.
+                    Pendant mon stage chez <a href="cv.html#stageOrchestra" class="underline">Orchestra - Travelsoft</a>, j'ai récupéré des données au format IATA (aérien) et je les ai comparées avec des données internes de l'entreprise.
                     Ça m'a beaucoup appris sur la gestion de données variées.
                 </p>
             </div>
@@ -177,19 +177,27 @@
                 </div>
                 <h2>Identifier les processus présents dans une organisation en vue d’améliorer les systèmes d’information</h2>
                 <p class="p-5-15">
-                    <!-- TODO  -->
+                    Durant mon stage chez <a href="cv.html#stageOrchestra" class="underline">Orchestra - Travelsoft</a>,
+                    pour mon projet de stage, j'ai dû mieux comprendre les processus de l'entreprise.
+                    Pour pouvoir proposer des améliorations sur le système d'information de l'entreprise.
                 </p>
                 <h2>Formaliser les besoins du client et de l’utilisateur</h2>
                 <p class="p-5-15">
-                    <!-- TODO  -->
+                    Dans le projet <a href="projets.html#projetReferendum" class="underline">référendum</a>,
+                    nous devions communiquer avec le client pour bien comprendre ses besoins et s'assurer que le système de vote répondait à ses attentes.
+                    J'ai appris à poser les bonnes questions et à reformuler pour m'assurer que tout le monde était sur la même longueur d'onde.
                 </p>
                 <h2>Identifier les critères de faisabilité d’un projet informatique</h2>
                 <p class="p-5-15">
-                    <!-- TODO  -->
+                    Dans le projet <a href="projets.html#projetEcommerce" class="underline">e-commerce</a>,
+                    j'ai dû évaluer la faisabilité technique et économique du projet. J'ai appris à analyser les ressources nécessaires,
+                    le temps et le budget pour m'assurer que le projet était réalisable.
                 </p>
                 <h2>Définir et mettre en œuvre une démarche de suivi de projet</h2>
                 <p class="p-5-15">
-                    <!-- TODO  -->
+                    Dans le projet <a href="projets.html#projetEcommerce" class="underline">e-commerce</a>,
+                    j'ai utilisé l'outil sur GitHub pour suivre l'avancement du projet. En créant des issues et en assignant des tâches,
+                    j'ai appris à gérer le temps et les ressources de manière efficace.
                 </p>
             </div>
             <div class="section3-apprentissage">
